[package]
name = "belay"
description = "Run your CI checks locally to git push with confidence"
license = "MIT/Apache-2.0"
repository = "https://github.com/JoshMcguigan/belay"
version = "0.1.2"
authors = ["Josh Mcguigan"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.12"
assert_fs = "0.13"
predicates = "1"
