[package]
name = "belay"
description = "Run your CI checks locally to git push with confidence"
license = "MIT/Apache-2.0"
repository = "https://github.com/JoshMcguigan/belay"
readme = "README.md"
version = "0.5.0"
authors = ["Josh Mcguigan"]
edition = "2018"

[dependencies]
directories = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-rust = "0.4"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.12"
assert_fs = "0.13"
predicates = "1"
